fixed box clipping over footer

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   margin: auto;
   height: 95vh;
   width: 95vw;
-  z-index: 100;
+  /* z-index: 100; */
 }
 
 .parallax {
