--- a/src/pages/Match/Match.css
+++ b/src/pages/Match/Match.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     height: auto;
-    width: auto;
+    width: 100%;
     margin: auto;   
 }
 
@@ -14,6 +14,7 @@
     margin: auto;
     border: 6px yellow solid;
     border-radius: 20px 20px 0 0;
+    width: 100%;
 }
 
 .players-container {
